# ngl

./: .gitmodules  CMakeLists.txt  README.md
doc/: mkdocs.yml
doc/learn/: [00] Neuroshok Generic Language.md  [01] Getting started.md  [02] Compiler.md  [03] Grammar.md  [04] Data.md  [05] Execution.md  [06] Interaction.md  [07] Constraint.md  [08] Meta.md  [09] Environment.md  [10] Build system.md  [11] Memory system.md  [12] Error system.md  [13] Modularity.md  [15] Versionning.md  [17] Example.md  index.md
doc/reference/ngl/cluster/: xeno.md
doc/reference/ngl/experimental/: shape.md
experimental/: concept.md  generic_index.md  ncbuild.md  ngl_project.md  parameterization.md  parser.md  parseralgo.md  versionning.md
resource/diagram/: cluster.drawio
source/: ngl.ngl  rule.ngl  shape.ngl
